corrected overflow in mobile navigation

--- a/src/components/FilterSelector/FilterSelector.scss
+++ b/src/components/FilterSelector/FilterSelector.scss
@@ -50,7 +50,6 @@
     top: 0;
     left: 0;
     padding: 20px;
-    height: 100%;
     background-color: $main-grey;
 
     &__button {
